--- a/doc/man/stakecube-qt.1
+++ b/doc/man/stakecube-qt.1
@@ -3,7 +3,7 @@
 .SH NAME
 stakecube-qt \- manual page for stakecube-qt v3.1.99.0
 .SH DESCRIPTION
-STAKECUBE Core version v3.1.99.0\-11f4a2bba4\-dirty (64\-bit)
+Stakecube Core version v3.1.99.0\-11f4a2bba4\-dirty (64\-bit)
 Usage:
 .IP
 stakecube\-qt [command\-line options]
