--- a/doc/man/stakecube-cli.1
+++ b/doc/man/stakecube-cli.1
@@ -3,11 +3,11 @@
 .SH NAME
 stakecube-cli \- manual page for stakecube-cli v3.1.99.0
 .SH DESCRIPTION
-STAKECUBE Core RPC client version v3.1.99.0\-11f4a2bba4\-dirty
+Stakecube Core RPC client version v3.1.99.0\-11f4a2bba4\-dirty
 .SS "Usage:"
 .TP
 stakecube\-cli [options] <command> [params]
-Send command to STAKECUBE Core
+Send command to Stakecube Core
 .TP
 stakecube\-cli [options] help
 List commands
